@@ -10,7 +10,7 @@
    </rect>
   </property>
   <property name="windowTitle" >
-   <string>Dialog</string>
+   <string>Upload to Openstreetmap</string>
   </property>
   <layout class="QVBoxLayout" >
    <property name="spacing" >
@@ -19,6 +19,16 @@
    <property name="margin" >
     <number>4</number>
    </property>
+   <item>
+    <widget class="QLabel" name="lblChangesetComment" >
+     <property name="text" >
+      <string>Please specify a comment for this changeset.</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QLineEdit" name="edChangesetComment" />
+   </item>
    <item>
     <widget class="QLabel" name="label" >
      <property name="text" >
